--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,13 +1,13 @@
 <!--index.wxml-->
 <view class="container">
-  <view class="userinfo">
-    <button wx:if="{{!hasUserInfo && canIUse}}" open-type="getUserInfo" bindgetuserinfo="getUserInfo"> 获取头像昵称 </button>
-    <block wx:else>
-      <image bindtap="bindViewTap" class="userinfo-avatar" src="{{userInfo.avatarUrl}}" background-size="cover"></image>
-      <text class="userinfo-nickname">{{userInfo.nickName}}</text>
-    </block>
+  <view class='text'>
+  <name>{{text.title}}</name>
+  <author>{{text.author}}</author>
+  <view class='item' wx:for="{{text.content}}">
+    {{item}}
   </view>
-  <view class="usermotto">
-    <text class="user-motto">{{motto}}</text>
+  </view>
+  <view bindtap='getText'  class='button'>
+      再来一篇
   </view>
 </view>
